tests/res/compile_errors/this_outside_method.say
print(this); // error: Cannot use 'this' outside of a class method
